# ck

./: .gitignore  Cricket.code-workspace  meson.build
ext/libogg/: ogg_win_vs2017.vcxproj  ogg_win_vs2022.vcxproj
ext/tinyxml/: tinyxml_win_vs2017.vcxproj  tinyxml_win_vs2022.vcxproj
ext/tremor/: tremor_win_vs2017.vcxproj  tremor_win_vs2022.vcxproj
src/ck/: ck_win_vs2017.sln  ck_win_vs2017.vcxproj  ck_win_vs2022.sln  ck_win_vs2022.vcxproj
src/ck/audio/: soundname.h
src/ck/core/: math.h
src/cktool/: cktool_win_vs2017.vcxproj  cktool_win_vs2022.vcxproj
